Forum Browser Changelog

TODO:
  Handle nested quotes
  
Current Version : 0.9.8

*** 0.9.8 ***

Fixed/Changed progress bar and improved progress updating

*** 0.9.7 ***

Fixed error in post failure reporting

*** 0.9.6 ***

Logged in status now checks api response headers value to catch expired login (previously just set to true on successful login)
Improved error handling and messages, should help with lost focus on errors
When adding Tapatalk forum, adds favicon to the logo list (in case there is nothing better)
Added the ability to remove/add built-in forums from the forums list
Fixed a bug with page display being blank on PM's
Fixed some issues with quoting from the message view
Removed all translation code as google now has only a paid translation service
Fixes some preview issues in the 'Post Reply' dialog
Cleaned out unused images, fixed some scrollbars

*** 0.9.5 ***

Fixed a bug with character encoding errors
Added dialog with the reason when when creating a new post fails
Skin Redone
Added logged in indicator on forums window
Disabled settings which currently won't work (Because of Tapatalk api and skin changes)
Added logging of version

*** 0.9.4 ***

Some skin changes
Missing media now included

*** 0.9.3 ***

Fixed bug causing wrong forum to be selected when choosing forums
Small skin changes

*** 0.9.2 ***

Fixed a bug stopping logins from occuring
Fixed bug causing no focus when forum loading failed
Hide categories (which contain no threads)
Added ability to add share forums to the online database
Added ability to add forums from online database
Added ability to set description and logo when adding a forum
Improved the forum chooser with logos and description

*** 0.9.1 ***

Added ability to delete added forums
Added the ablity to add/remove forums from favorites (favorites will be at the top of the list)
Fixed the settings menu
Fixed the ign.com forum def

*** 0.9.0 ***

Added the ability to access Tapatalk enabled forums