@@ -105,6 +105,9 @@
     <string id="30225">Remove A Forum From Favorites</string>
     <string id="30226">Add A Forum From The Online Database</string>
     <string id="30227">Posting A Reply Failed:</string>
+    <string id="30228">Enable Log Debugging</string>
+    <string id="30229">Empty Forum</string>
+    <string id="30230">There are no threads in this forum.</string>
     
     <string id="3000">Prev</string> <!-- Previous -->
     <string id="3001">Next</string>
