@@ -2,12 +2,17 @@ Forum Browser Changelog
 
 TODO:
   Handle nested quotes
+  Editing a post
   
 Current Version : 0.9.8
 
 *** 0.9.8 ***
 
 Fixed/Changed progress bar and improved progress updating
+Added 'Enable Debug Logging' option in settings which turns on more detailed loggin
+Empty forums now show a 'Empty Forum' dialog instead of the error dialog
+Fix handling of failed forum change
+Added some missing images
 
 *** 0.9.7 ***
 
